<resources>
    <string name="app_name">HashCaller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sample">SampleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="block">Block</string>

    <string name="transition_btn">btn_sample_transition</string>
    <string name="search_view_transition">editTextTransition</string>
    <string name="safety_net_api_key">AIzaSyDkpiDiYb84psGet7KKcqNG3DN3dgfyy18</string>
    <string name="start">start</string>
    <string name="close">close</string>
    <string name="searching_in_progress">Searching for</string>
    <string name="dsf">dsf</string>
    <string name="enable_hashcaller_for_sms">Enable HashCaller for SMS</string>
    <string name="enable_hash_caller_for_sms">Enable Hashcaller for sms</string>
    <string name="ennable_for_blocking_sms">set HashCaller as Default SMS to block SMS</string>
    <string name="enable_hash_caller_sms_action">Enable</string>
    <string name="hashcaller_name">HashCaller</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="not_result_in_contacts">No result in contacts</string>
    <string name="no_result_in_messages">No result in messages</string>
    <string name="no_results">No Results</string>
    <string name="country">Country</string>
    <string name="this_persons_is_in_your_contact">This persons is in your contact</string>
    <string name="terms_and_conditions_agree">By continuing, you agree to <u>Terms &amp; privacy notice</u></string>
    <string name="to_identify_and_block">To identify and block incoming phone calls HashCaller need access to your phone state</string>
    <string name="to_prevent_blocking_your">To prevent Blocking your contacts and enable searching.</string>
    <string name="hashcaller_needs_your_permission">HashCaller needs your permissions for caller ID, spam detection and call blocking to work.</string>
    <string name="rational_contacts">Allow access to contacts to prevent blocking your contacts and enable searching.</string>
    <string name="rational_phone_state">Allow phone access to block spam calls and identify incoming calls.</string>
    <string name="rational_contact_and_phone_state">Allow contacts access and phone access to caller Id and spam detection to work properly.</string>
    <string name="contact_and_phone_state_rational">HashCaller needs access to your contacts and phone call state for caller Id to work and enable searching</string>

    <string-array name="custom_block_type">
        <item> Number starts with</item>
        <item> Number ends with</item>
        <item> Number containing</item>
    </string-array>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="general">General</string>
    <string name="create_pattern">Create pattern</string>
    <string name="sms_spam_info">SMS sent by scammers appear hear.</string>
    <string name="calls_spam_info">Calls identified as spam will appear here.</string>
    <string name="no_result">No result</string>
    <string name="continue_str">Continue</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="location">Location</string>
    <string name="drag_to_move_caller_id">Drag to move caller ID</string>
    <string name="spam_calls">Spam Calls</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="allow_all">Allow all</string>
    <string name="overly_description">Enable display over other apps to show caller Id during incoming calls.</string>
    <string name="caller_id_description">Set HashCaller as default caller ID to block and identify incoming calls, without this call blocking and caller Id functionality will not work properly.</string>
    <string name="mandatory">mandatory</string>
    <string name="optional">optional</string>
    <string name="enable">Enable</string>
    <string name="rational_cntcts">HashCaller needs access to contacts to identify unknown calls and to enabling searching.</string>
    <string name="verifying">Verifying..</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="server_error">Something went wrong</string>
    <string name="bad_request">Bad request</string>
    <string name="no_internet">No internet</string>
    <string name="license_head">THE FOLLOWING DESCRIBES ATTRIBUTION NOTICE FOR THIRD PARTY THIRD PARTY CONTENTS AND SOFTWARE THAT MAY BE CONTAINED IN PORTIONS OF HASHCALLER PRODUCT</string>
    <string name="apacheDesc">The following component(s) are licensed under the Apache License 2.0 reproduced below:</string>
    <string name="apache_license_2_0">Apache License 2.0</string>
    <string name="retrofit_license"><u># Retrofit.</u></string>
    <string name="android_jetpack"><u># Android Jetpack</u></string>
    <string name="google_play_services"><u># Google Play services</u></string>
    <string name="google_libphonenumber"><u># Google libphonenumber</u></string>
    <string name="firebase"><u># Firebase</u></string>
    <string name="okhttp"><u># OkHttp</u></string>
    <string name="kotlin"><u># Kotlin</u></string>
    <string name="glide"><u># Glide</u></string>
    <string name="material_ui"><u># Material UI</u></string>
    <string name="hdodenhof_circleimageview"><u># hdodenhof/CircleImageView</u></string>
    <string name="zetbaitsu_compressor"><u># zetbaitsu/Compressor</u></string>
    <string name="countrycodepickerproject"><u># CountryCodePickerProject</u></string>
    <string name="kotlinx_coroutines"><u># kotlinx.coroutines</u></string>
    <string name="android_smsmms"><u># android-smsmms</u></string>
    <string name="mit_desc">The following component(s) are licensed under the MIT License reproduced below:</string>
    <string name="mit_license_head">MIT License</string>
    <string name="hidden_secrets_gradle_plugin"><u># hidden-secrets-gradle-plugin</u></string>
    <string name="apache2license">Licensed under the Apache License, Version 1.0 (the \"License\" ); you may not use this file except in compliance with the License. You may obtain a copy of the License at \n \n http://www.apache.org/licenses/LICENSE-2.0) \n\n Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. see the License for the specific language governing permissions and limitations under the License.</string>
    <string name="mit_license">Permission hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"software\"). to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n \n The
        above copyright notice and this permission notice shall be included in all copies or substantial portions of the software. \n \n
        THE SOFTWARE IS PROVIDED \"AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT.IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER AN ACTION OF CONTRACT,TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. </string>
    <string name="credits"> Credits</string>
    <string name="work_illustrations_by_storyset"><u>Work illustrations by Storyset</u></string>
    <string name="android_open_source_project"><u># Android Open Source Project</u></string>
    <string name="remix_icon"><u># RemixIcon</u></string>
    <string name="contacts_consent">We may process your personal information relating to you if you use our products or services. Such information may include your phone number (hashed) , call log, contacts, and spam reports. All phone numbers are processed, sent and stored as secure hash values.Only hash digest of phone numbers are transferred and stored in HashCaller. Your personal data we collected will be removed from HashCaller when you deactivate your account. We use this information to improve our services.Your personal data including profile data and phone numbers removed when you  deactivate  your account. We will not use this information for any other purposes. We do not share or sell your personal information with third parties.The above data is necessary to provide our service. If you do not wish to accept , you may uninstall HashCaller.</string>
    <string name="agree">" I've read and agree to Hashcaller's <br /> <u>Terms of service</u> and <u> privacy policy</u> "</string>
    <string name="initial_info_title">Complete your \n Profile</string>
    <string name="privacy_desc">Only hash digest of phone numbers are transferred and stored in HahCaller</string>
    <string name="respect_privacy">We respect your privacy</string>
    <string name="more_info_privacy">For more information please refer to our <u>Privacy policy</u></string>
    <string name="data_we_process">Data we process</string>
    <string name="lottie_1"><u>Animation by matthew widodo on LottieFiles</u></string>
    <string name="icon_made"><u>Icons made by https://www.freepik.com Freepik from https://www.flaticon.com</u></string>
</resources>