<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.CreditsActvity"
    android:background="@color/colorBackground"
    android:theme="@style/AppTheme"
    >
  <ScrollView
      android:id="@+id/scrollViewCredits"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:paddingBottom="32dp"
      >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:orientation="vertical"
          android:layout_marginBottom="32dp"
          >
          <TextView
              android:id="@+id/tvHead"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/textColor"
              android:alpha="0.74"
              android:text="@string/license_head"
              android:layout_marginTop="16dp"
              />
            <TextView
                android:id="@+id/tvApacheHead"
                android:layout_width="wrap_content"
                android:alpha="0.74"
                android:layout_height="wrap_content"
                android:text="@string/apache_license_2_0"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:textColor="@color/textColor"
                />
          <TextView
              android:id="@+id/tvApDesc"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:layout_height="wrap_content"
              android:text="@string/apacheDesc"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAndroidOpensource"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:alpha="0.74"
              android:text="@string/android_open_source_project"
              android:clickable="true"
              android:focusable="true"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:text="@string/retrofit_license"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp2"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/android_smsmms"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:alpha="0.74"
              android:text="@string/android_jetpack"
              android:clickable="true"
              android:focusable="true"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />


          <TextView
              android:id="@+id/tvAp4"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/google_play_services"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp5"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/google_libphonenumber"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp6"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/firebase"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp7"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/okhttp"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />

          <TextView
              android:id="@+id/tvAp8"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/kotlin"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />

          <TextView
              android:id="@+id/tvAp9"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/glide"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp10"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/material_ui"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp11"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/hdodenhof_circleimageview"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp12"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/zetbaitsu_compressor"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp13"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/countrycodepickerproject"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp14"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/kotlinx_coroutines"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp15"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/kotlinx_coroutines"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvAp16"
              android:layout_width="wrap_content"
              android:alpha="0.74"
              android:clickable="true"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/remix_icon"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvApacheLicensePart1"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/apache2license"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />

          <TextView
              android:id="@+id/tvApMITHead"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/mit_license_head"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvApMITDesc"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/mit_desc"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvMit1"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/hidden_secrets_gradle_plugin"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvMitLicense"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/mit_license"
              android:textColor="@color/textColor"
              android:layout_marginTop="16dp"
              />
          <TextView
              android:id="@+id/tvCreditsHead"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/credits"
              android:textColor="@color/textColor"
              android:layout_marginTop="32dp"
              />
          <TextView
              android:id="@+id/tvAttr1"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="@string/work_illustrations_by_storyset"
              android:textColor="@color/textColor"
              />
          <TextView
              android:id="@+id/tvAttr2"
              android:layout_width="wrap_content"
              android:clickable="true"
              android:alpha="0.74"
              android:focusable="true"
              android:layout_height="wrap_content"
              android:text="Icons made by https://www.freepik.com Freepik from  https://www.flaticon.com"
              android:textColor="@color/textColor"
              />
      </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>