<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        app:cardBackgroundColor="@color/colorPrimaryAlpha"
        app:cardCornerRadius="16dp"
        android:animateLayoutChanges="true"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPhoneAcccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/iconBackground"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/contact_circular_background_danger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ic_phone_line_white"
                    app:layout_constraintBottom_toBottomOf="@+id/iconBackground"
                    app:layout_constraintEnd_toEndOf="@+id/iconBackground"
                    app:layout_constraintStart_toStartOf="@+id/iconBackground"
                    app:layout_constraintTop_toTopOf="@+id/iconBackground" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Phone Access"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iconBackground"
                app:layout_constraintTop_toTopOf="@+id/iconBackground" />

            <TextView
                android:id="@+id/permissionType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.59"
                android:text="@string/mandatory"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/title" />


            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.69"
                android:text="@string/to_identify_and_block"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enableButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/enable"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>

